--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#6750A4",
-  "background_color": "#FFFBFE"
+  "theme_color": "#0097a7",
+  "background_color": "#ffffff"
 }
